--- a/exercises/sample_course/correct_button.html
+++ b/exercises/sample_course/correct_button.html
@@ -1,7 +1,6 @@
 {% extends 'access/exercise_frame.html' %}
 
 {% block exercise %}
-
 <h1>Choose the correct button</h1>
 
 {% if result.accepted %}
@@ -17,10 +16,11 @@
 
 {% else %}
 <form method="post" action="#">
-	<button type="submit" name="left" value="1">Wrong</button>
-	<button type="submit" name="right" value="1">Right</button>
+	<div class="form-group">
+		<button type="submit" name="left" value="1" class="btn btn-warning">Wrong</button>
+		<button type="submit" name="right" value="1" class="btn btn-primary">Right</button>
+	</div>
 </form>
-
 {% endif %}
 
 {% endblock %}
